# TesteDataseed

./: .dockerignore  .env.sample  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  utils.py
dataseed/: app.py  conftest.py  database.py  models.py  security.py
dataseed/api/routes/: auth.py  management.py  transaction.py  users.py
dataseed/api/routes/test/: test_auth.py  test_management.py  test_transaction.py  test_users.py
dataseed/api/schemas/: message.py  token.py  transaction.py  user.py
dataseed/application/interfaces/: user_repository_interface.py
dataseed/application/use_cases/: auth_use_case.py  transaction_use_case.py  user_use_case.py
dataseed/application/use_cases/test/: test_auth_use_case.py  test_transaction_use_case.py  test_user_use_case.py
dataseed/domain/dto/: user_dto.py
dataseed/domain/use_cases/: auth_use_case.py  transaction_use_case.py  user_use_case.py
dataseed/infrastructure/db/: user_repository.py
dataseed/infrastructure/db/test/: test_user_repository.py
migrations/: env.py
migrations/versions/: 749925d40a84_gerando_tabela_de_transction.py  da4cb355ca3a_removendo_campos_obrigatórios_da_tabela_.py  eb648413d73f_gerando_tabela_de_users.py
